User Cache should not invalidate empty weak_ptrs

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.3
    • Affects Version/s: None
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Platforms 2018-08-27
    • 12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      During invalidateIf, the cache will lock a weak_ptr and later attempt to invalidate it. https://github.com/mongodb/mongo/blob/b079e4713d897b5541c2804386025817ec720800/src/mongo/util/invalidating_lru_cache.h#L124

       

      We should make sure that the lock happened successfully, before attempting further processing.

            Assignee:
            Jonathan Reams
            Reporter:
            Spencer Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: