SERVER-36477 Only invalidate valid ptrs in InvalidatingLRUCache